<resources>
    <string name="app_name">Friend Tracker</string>
    <string name="add">Add</string>
    <string name="contact">Contacts</string>
    <string name="welcome">Welcome to Friend Tracker!</string>
    <string name="instruction">Click Add A Contact to import your first contact</string>
    <string name="meeting">Meetings</string>
    <string name="addContact">Add a Contact</string>
    <string name="addMeeting">Add a Meeting</string>
    <string name="addMeetingBt">Add Meeting</string>
    <string name="contactList">Display Contact List</string>
    <string name="meetingList">Meeting List</string>
    <string name="displaymeetingList">Display Meeting List</string>
    <string name="friendList">Friend List</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="controller">MainMenuController</string>
    <string name="add_button">add button</string>
    <string name="friendManager">Friend Manager</string>
    <string name="meetingManager">Meeting Manager</string>
    <string name="editContactTitle">Edit Contact Details</string>
    <string name="editMeetingTitle">Edit Meeting Details</string>
    <string name="birthday">Click to enter birthday</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="id">id</string>
    <string name="className">className</string>
    <string name="main">main</string>
    <string name="mainNoAdd">mainNoAdd</string>
    <string name="edit">edit</string>
    <string name="options">Options</string>
    <string name="home">Home</string>
    <string name="title">Enter the title for this meeting</string>
    <string name="startDate">Current Date and Time:</string>
    <string name="startTime">Start Time</string>
    <string name="endDate">Enter End date</string>
    <string name="endTime">End Time</string>
    <string name="latitude">Meeting LATITUDE:</string>
    <string name="longitude">Meeting LONGITUDE:</string>
    <string name="invite">Invite Friends</string>
    <string name="inviteFriend">Select the friend you want to add to this meeting</string>
    <string name="invalid">Invalid</string>
    <string name="invBefore">Invalid: Start Date and Time must be earlier than End Date and Time</string>
    <string name="invAfter">Invalid: End Date and Time must be later than Start Date and Time</string>
    <string name="okay">OK</string>
    <string name="settings">settings</string>
    <string name="location">Location</string>
    <string name="warning">Warning</string>
    <string name="warningMessage">Contact List is empty, select Add A Contact to import your first contact</string>
    <string name="warningMessage2">Meeting List is empty, select Add A Contact to import your first contact</string>
    <string name="savedInfo">Saved Information</string>
    <string name="savedMessaged">Your contact information has been saved!</string>
    <string name="confirmMessage">You havent saved your changes, are you sure you wish to go back?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="second">seconds</string>
    <string name="removeInvited">Remove Friends</string>
    <string name="duplicateFriend">Invalid: Friend chosen is already invited</string>
    <string name="invTitle">Title Invite</string>
    <string name="invStDate">Start Date Invite</string>
    <string name="invStTime">Start Time Invite</string>
    <string name="invEndDate">End Date Invite</string>
    <string name="invEndTime">End Time Invite</string>
    <string name="invLat">Lat invite</string>
    <string name="invLon">Lon invite</string>
    <string name="extra">Extra</string>
    <string name="current">Current Date</string>
    <string name="invalidLocation">No Friends were found in at this time, please select another
        friend or try again later</string>
    <string name="database">Database</string>
    <string name="suggest">Suggest Meeting Now</string>
    <string name="suggestNow">Suggest Meeting Interval:</string>
    <string name="minute">minutes</string>
    <string name="minutesb4">minutes before meeting</string>
    <string name="upcomingMeetings">Notifications for upcoming meetings displayed:</string>
    <string name="remindMe">Remind me in:</string>
    <string name="viewLocation">View Location on Maps</string>
    <string name="startService">Start Get Location Service</string>
    <string name="stopService">Stop Get Location Service</string>
    <string name="myLocation">My Location: </string>
    <string name="locationInstruct">Press Start Get Location Service to get location</string>
    <string name="noContacts">Please import a contact first!</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="meetingSuggest">Suggested Meeting</string>
    <string name="closest">Closest Friend:</string>
    <string name="atLoc">Location:</string>
    <string name="title_activity_maps">Map</string>
    <string name="remind">Upcoming meetings remind me in: </string>
    <string name="afterDismiss">minutes after notification dismissed</string>
    <string name="notif">Meeting Reminder</string>
    <string name="notifText">You have a meeting soon</string>
    <string name="dismiss">Dismiss</string>
    <string name="networkInfo">networkInfo</string>
    <string name="networkTrue">Network Connected</string>
    <string name="networkFalse">Network Disconnected</string>
</resources>
