<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/tvSuggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestNow"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSuggestMeeting"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minute"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvUpcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/upcomingMeetings"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etUpcomingMeetings"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvInterval2"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/minutesb4"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remind"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="94dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etRemindMe"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvInterval3"
            android:layout_width="285dp"
            android:layout_height="68dp"
            android:text="@string/afterDismiss"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btSave"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />

</LinearLayout>