<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amanda.friendtrackerappass1.View.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1">


        <TextView
            android:id="@+id/tvContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:paddingTop="50dp"
            android:text="@string/welcome"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:id="@+id/tvInstruct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instruction"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addContact"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="258dp" />

        <Button
            android:id="@+id/btDisplayContact"
            android:layout_width="245dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/contactList" />

        <Button
            android:id="@+id/btDisplayMeeting"
            android:layout_width="251dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/displaymeetingList"
            android:layout_weight="0.12" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
