<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amanda.friendtrackerappass1.View.AddMeetingActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="1.0">

        <TextView
            android:id="@+id/tvAddMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/addMeeting"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/title" />

        <EditText
            android:id="@+id/etMeetingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.52"
            android:text="@string/startDate" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="0.84" />

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.02"
            android:ems="10"
            android:inputType="none" />

        <Button
            android:id="@+id/btEndDate"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.86"
            android:text="@string/endDate" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:layout_weight="0.89" />

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:ems="10"
            android:inputType="none" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/latitude" />

        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/longitude" />

        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/btMeetingInvite"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/invite" />

        <Button
            android:id="@+id/btMeetingAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/addMeetingBt" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
</ScrollView>