<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amanda.friendtrackerappass1.View.EditContactActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvEditTitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="0.00"
            android:text="@string/editContactTitle"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/etEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.79" />

        <Button
            android:id="@+id/btSave"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/save"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="463dp" />

        <Button
            android:id="@+id/btGoBack"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:text="@string/back" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
